# rust-words_counting

./: Cargo.toml  README.md  config.json
results1/: by_a.txt  by_n.txt
src/: archive_manager.rs  build.rs  lib.rs  main.rs  wc_config.rs
