[package]
name = "words_counting"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
regex = "1.0"

[dependencies]
argparse = "0.2.2"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
walkdir = "2"
lazy_static = "1.4.0"
crossbeam = "0.8.1"
libarchive3-sys = "0.1.2"
libc = "0.2"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"